# scrabble-champion

./: app.py  pyproject.toml  readme.md  utils.py
scripts/: utils.py
