[tool.poetry]
name = "scrabble-champion"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scrabble_champion"}]

[tool.poetry.dependencies]
python = "3.11.1"
ipdb = "^0.13.13"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
